# Wisp-AI-Assistant

./: .env.example  .gitattributes  .gitignore  CHAT_TOOL_LOOP_COMPARISON_PLAN.md  LICENSE  Open Wisp Mac Logs.command  PLUGIN_REDESIGN_PLAN.md  README.es.md  README.fr.md  README.md  README.zh-CN.md  README.zh-TW.md  REFACTOR_MAP.md  Start Wisp (Mac Native).command  Start Wisp (Mac Python).command  Start Wisp Debug.bat  Start Wisp Debug.command  Start Wisp Debug.sh  Start Wisp.bat  Start Wisp.command  Start Wisp.sh  Summary.txt  TEMP_PROFILE_PLAN.md  Test Wisp (Mac Native).command  Uninstall Wisp.bat  addons.json  config.py  conftest.py  glama.json  main.py  prototype_latency.py  pyproject.toml  pytest.ini  requirements-build.txt  requirements-light.txt  requirements.txt  tool_keywords.json
.github/: README.es.md  README.fr.md  README.md  README.zh-CN.md  README.zh-TW.md  actionlint.yaml
Wisp Website/: Wisp Docs.html  docs-pages.js
addons/: README.md
core/: addon_distribution.py  addon_host.py  addon_manager.py  addon_runtime.py  addon_store.py  agent_runner.py  asset_server.py  assistant_text.py  attachment_source.py  audio.py  audio_state.py  capture.py  chatgpt_auth.py  context_fetcher.py  context_fetcher_page.py  context_hotkey.py  crash_report.py  error_recommendations.py  filler_bake.py  hotkeys.py  live_voice.py  llm.py  memory.py  ollama_manager.py  optional_deps.py  platform_utils.py  plugin_manager.py  privacy_gateway.py  privacy_model.py  privacy_redaction.py  prompt_i18n.py  query_pipeline.py  secret_store.py  settings_model.py  setup_check.py  stt.py  (+7 more)
(+1141 files in other folders)
