# Project metadata and shared tool configuration for the Wisp Python package.
[project]
name = "wisp"
version = "0.10.1"
requires-python = ">=3.12,<3.13"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "build_logs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501",
]

[tool.mypy]
python_version = "3.12"
# tests/ has no __init__.py files, so both conftest.py files collide on the
# module name "conftest" without explicit package bases; mypy aborts entirely.
explicit_package_bases = true
ignore_missing_imports = true
warn_unused_configs = true
no_implicit_optional = true
files = ["core", "runtime", "ui", "tests"]
